# bragi

./: README.md  pyproject.toml  requirements.txt
bragi/: logit_warpers.py  metric_generator.py  verse_parsers.py
notebooks/: lexical-constraint-dev.ipynb  llama-dev.ipynb  meter-generator-dev.ipynb  processor-dev.ipynb
notebooks/.ipynb_checkpoints/: meter-generator-dev-checkpoint.ipynb  processor-dev-checkpoint.ipynb
tests/: test_verse_parsers.py
