[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bragi"
version = "0.0.1"
description = "Turn your LLM into a poet with token interventions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Joe Hoover" }]
requires-python = ">=3.8"
dependencies = [
    "packaging", 
    "pydantic>1", 
    "requests>2", 
    "pyyaml", 
    "google-cloud-storage", 
    "typer",
    "torch",
    "phonemizer=^3.2.1",
    "transformers=^4.27.1",
    "pronouncing=^0.2.0
]



[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
transformers = ['transformers']
dev = [
    "black",
    "mypy",
    "pytest",
    "responses",
    "ruff",
    "huggingface_hub",
]


[project.urls]
homepage = "https://replicate.com"
repository = "https://github.com/joehoover/bragi"

[tool.pytest.ini_options]
testpaths = "tests/"
